<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/detail_poster"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/movie_poster"
        android:scaleType="centerCrop"
        android:src="@drawable/sample_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/detailed_thumbnail"
        android:layout_width="130dp"
        android:layout_height="200dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/movie_thumbnail"
        android:src="@drawable/sample_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="Wrath of Man"
        app:layout_constraintStart_toEndOf="@+id/detailed_thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/detail_poster" />

    <TextView
        android:id="@+id/voteCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/detailed_thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/movie_title"
        tools:text="Rating : 8.4" />


    <TextView
        android:id="@+id/movie_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/voteCount"
        app:layout_constraintTop_toBottomOf="@+id/voteCount"
        tools:text="Release Date : 2015" />


    <!--    <LinearLayout-->
    <!--        android:id="@+id/genres"-->
    <!--        android:paddingBottom="8dp"-->
    <!--        android:paddingTop="8dp"-->
    <!--        android:paddingStart="16dp"-->
    <!--        android:paddingEnd="16dp"-->
    <!--        android:orientation="horizontal"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content">-->

    <!--    </LinearLayout>-->

    <TextView
        android:id="@+id/details_adult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintStart_toEndOf="@+id/detailed_thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/movie_year"
        tools:text="18+ : Yes" />

    <TextView
        android:id="@+id/overview_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/overview"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/overview"
        app:layout_constraintTop_toBottomOf="@+id/detailed_thumbnail" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overview_label"
        tools:text="@string/sample_overview" />

</androidx.constraintlayout.widget.ConstraintLayout>